Fixing header alignment.

--- a/css/coffeelint.css
+++ b/css/coffeelint.css
@@ -38,7 +38,7 @@ body {
   margin-right: 40px;
   color: #fff;
   position:relative;
-  top:5px;
+  top:8px;
 }
 
 .header_links {
